--- a/resources/sass/components/modals/_new-payments.scss
+++ b/resources/sass/components/modals/_new-payments.scss
@@ -1,4 +1,4 @@
-#new-record-modal{
+#new-payments-modal{
     .modal-header{
         border-bottom: 0px;
     }
